--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ e﻿<!DOCTYPE html>
 			
 	<h2 class="page-header">최근 변경점</h2>
 			<p>2020.09.20 - 모멘텀 패치 스타포스 확률 변경이 반영되었습니다.</p><br>
-			<p>스타캐치 곱적용/합적용 선택 기능이 추가되었습니다.
+			<p>스타캐치 곱적용/합적용 선택 기능이 추가되었습니다.</
 	    
       <p><br><br><br><br><br><br>
     </p>
