--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@ e﻿<!DOCTYPE html>
     <p><a href="http://gall.dcinside.com/mgallery/board/lists?id=danpoong" target="_blank">단풍 마이너 갤러리</a>에 적어주시면 자주 봅니다.<br></p>
 			
 	<h2 class="page-header">최근 변경점</h2>
-			<p>2020.09.20 - 모멘텀 패치 스타포스 확률 변경이 반영되었습니다.</p><br>
-			<p>스타캐치 곱적용/합적용 선택 기능이 추가되었습니다.</
+			<p>2020.09.20 - 모멘텀 패치 스타포스 확률 변경이 반영되었습니다.<br>
+			스타캐치 곱적용/합적용 선택 기능이 추가되었습니다.<br>
+			자릿수 표기 오류를 수정했습니다.</p><br>
 	    
       <p><br><br><br><br><br><br>
     </p>
