--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ e﻿<!DOCTYPE html>
 		<div class="container">
 		<h2  class="page-header">스타포스 시뮬레이터란?</h2>
 		<p>목표치를 정하고 자동으로 강화를 합니다.<br>
-		소모 메소량을 대략적으로 알 수 있고, 동일한 목표치를 갖고 강화한 25000개 아이템의 통계와 비교해서 대략적인 운세의 급을 알 수 있습니다.<br>
+		소모 메소량을 대략적으로 알 수 있고, 동일한 목표치를 갖고 강화한 100000개 아이템의 통계와 비교해서 대략적인 운세의 급을 알 수 있습니다.<br>
   오늘의 강화운세를 점쳐보기 좋습니다.</p>
   <button type="button" class="btn btn-dark btn-lg" onclick="retsim()">하러가기</button>
     <h2  class="page-header">주흔작 시뮬레이터란?</h2>
@@ -107,7 +107,7 @@ e﻿<!DOCTYPE html>
         <div class="tab_item" id="starforce">
 		<div class="container">
             <h2>강화운을 시험해보자.</h2><br>
-            <p>피해갈 수 없는 운명 스타포스. 네가 이기나 내가 이기나 한번 해보자(가상이지만).</p>
+            <p>피해갈 수 없는 운명 스타포스. 네가 이기나 내가 이기나 한번 해보자(가상이지만).<br>주의! 25성 아이템은 연산 시간이 매우 오래 걸립니다.</p>
 			<form name="sf">
         <div class="form-group">
         <label for="lev">아이템 레벨</label>
