--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ e﻿<!DOCTYPE html>
         <div class="tab_item" id="starforce">
 		<div class="container">
             <h2>강화운을 시험해보자.</h2><br>
-            <p>피해갈 수 없는 운명 스타포스. 네가 이기나 내가 이기나 한번 해보자(가상이지만).<br>주의! 25성 아이템은 연산 시간이 매우 오래 걸립니다.</p>
+            <p>피해갈 수 없는 운명 스타포스. 네가 이기나 내가 이기나 한번 해보자(가상이지만).</p>
 			<form name="sf">
         <div class="form-group">
         <label for="lev">아이템 레벨</label>
