--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ e﻿<!DOCTYPE html>
 좀 더 정확한 강화 전략을 찾는다면 <a href="http://gall.dcinside.com/board/view?id=maplestory&no=5469308" target="_blank">여기</a>를 참조하시면 좋습니다.</p>
 
     <h2  class="page-header">건의 및 버그제보</h2>
-    <p><a href="http://gall.dcinside.com/mgallery/board/lists?id=danpoong" target="_blank">단풍 마이너 갤러리</a>에 적어주시면 자주 봅니다.<br></p>
+    <p><a href="http://gall.dcinside.com/mgallery/board/lists?id=danpoong" target="_blank">단풍 마이너 갤러리</a>에 적어주시면 자주 봅니다.(메접하면 안봐요)<br></p>
 			
 	<h2 class="page-header">최근 변경점</h2>
 			<p>2020.09.20 - 모멘텀 패치 스타포스 확률 변경이 반영되었습니다.<br>
