--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="#sfsimresult" id="restab">자동강화 결과</a></li>
           <li><a href="#sflogs" id="logtab">강화로그</a></li>
           <li><a href="#sfcosttable">스타포스 비용표</a></li>
-          <li><a href="#sfprobtable" onclick="sfprobtable()">스타포스 확률표</a></li>
+          <li><a href="#sfprobtable">스타포스 확률표</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -298,7 +298,7 @@
         <div class="tab_item" id="sfcosttable">
           <div class="container">
             <form name = "sftbl">
-            <input type "number" class="form-control" autocomplete="off"
+            <input type="number" class="form-control" autocomplete="off"
             id="sftlev" name="sftlev" onkeyup="showsftable()" placeholder="레벨을 입력하시면 표가 나옵니다(100레벨 이상)">
             </form>
             <div id="showsftable">
@@ -308,6 +308,12 @@
 
         <div class="tab_item" id="sfprobtable">
           <div class="container">
+              <form name="stfprob">
+                <button type="button" class="btn btn-dark btn-lg" onclick="sfprobtable()">스타캐치 미적용
+                </button>
+                <button type="button" class="btn btn-dark btn-lg" onclick="sfprobtable_catch()">스타캐치 적용
+                </button>
+              </form>
               <div id="protinside">
               </div>
             </div>
