--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 			<p>2020.09.20 - 모멘텀 패치 스타포스 확률 변경이 반영되었습니다.<br>
 			스타캐치 곱적용/합적용 선택 기능이 추가되었습니다.<br>
 			자릿수 표기 오류를 수정했습니다.</p><br>
+      <p>2021.02.19 - <a href="https://maplestory.nexon.com/News/Notice/Notice/133192">넥슨 공식 발표</a>에 따라 스타캐치 기준 스타포스 확률표를 추가했습니다.</p><br>
 	    
       <p><br><br><br><br><br><br>
     </p>
