--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 		</button>
-        <h4 class="modal-title" id="myModalLabel">안녕하세요.</h4>
+        <h4 class="modal-title" id="myModalLabel">나는짱 메이플짱</h4>
 		</div>
 		<div class="modal-body">
-		<img src=MapleStory_NdEHM8mUaO.png>
-		<p>마스크 잘 쓰고 다닙시다.</p>
-		<p>우리는 이겨낼 수 있습니다. "카취 캅쉬다." We go together.</p>
-		<p>Thank you. 감사합니다.</p>
+		<img src=MapleStory_hjDgta2rLw.png>
+		<p>메이플짱 메이플최고 강화가제일좋아<br>
+			메소에밥말아먹고 스타포스로샤워하고 큐브로이닦아야지</p>
 		</div>
 		<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
