--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 좀 더 정확한 강화 전략을 찾는다면 <a href="http://gall.dcinside.com/board/view?id=maplestory&no=5469308" target="_blank">여기</a>를 참조하시면 좋습니다.</p>
 
     <h2  class="page-header">건의 및 버그제보</h2>
-    <p>그런거 없음</p>
+    <p>뜨겁게 무시 중(since 2020)</p>
 
 	<h2 class="page-header">최근 변경점</h2>
       <p>2022.04.27 - 아이템 파괴 시 복구 비용이 반영되지 않던 점이 수정되었습니다.<br>
