--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 		</div>
 		<div class="modal-body">
 		<img src=MapleStory_hjDgta2rLw.png>
-		<p>메이플짱 메이플최고 강화가제일좋아<br>
-			메소에밥말아먹고 스타포스로샤워하고 큐브로이닦아야지</p>
+		<p>메이플짱 메이플최고 강화가제일좋아<br>스타포스에밥말아먹고 큐브로샤워하고 환불로이닦아야지</p>
 		</div>
 		<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
