세이비어 반영

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     <p>뜨겁게 무시 중(since 2020)</p>
 
 	<h2 class="page-header">최근 변경점</h2>
-      <p>2022.04.27 - 아이템 파괴 시 복구 비용이 반영되지 않던 점이 수정되었습니다.<br>
+			<p>2022.12.22 - 세이비어 패치 스타포스 확률 및 강화비용 변경이 반영되었습니다.<br></p>
+			<p>2022.04.27 - 아이템 파괴 시 복구 비용이 반영되지 않던 점이 수정되었습니다.<br>
       스트레이트가 아닌 결과에서도 스트레이트로 표기되던 점이 수정되었습니다.<br>
       스타캐치 시 확률 증가가 일괄 곱적용으로 변경되었습니다.<br>
       전체 통계자료(평균값) 계산시 스타캐치 정보가 제대로 반영되지 않던 부분이 수정되었습니다.<br>
