--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 		<span aria-hidden="true">&times;</span>
 		</button>
-        <h4 class="modal-title" id="myModalLabel">나는짱 메이플짱</h4>
+        <h4 class="modal-title" id="myModalLabel">즉시 행복</h4>
 		</div>
 		<div class="modal-body">
-		<img src=MapleStory_hjDgta2rLw.png>
-		<p>메이플짱 메이플최고 강화가제일좋아<br>스타포스에밥말아먹고 큐브로샤워하고 환불로이닦아야지</p>
+		<img src=MapleStory_niiC6Y2CJO.png>
+		<p>인고의 시간끝에 드디어 제로에게 빛이 왔습니다<br>전세계 제로여러분 화이팅입니다 제로짱</p>
 		</div>
 		<div class="modal-footer">
 		<button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
